--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
+  <!-- <div class="loader">
+    <div class="txt">Sari-Sari</div>
+  </div> -->
   <header>
     <nav>
       <div class="logo">
-        <img src="images/sari-sari-logo2.svg" alt="Sari-Sari Logo">
+        <img src="images/sari-sari-logo.svg" alt="Sari-Sari Logo">
       </div>
       <div class="nav-links flex-center">
         <a href="#">Home</a>
         <a href="#">About</a>
-        <a href="#">Blog</a>
+        <a href="#">Pricing</a>
         <a href="#">Login</a>
-        <a href="#">SHOP NOW</a>
+        <a href="./redirect.html">CREATE NOW</a>
       </div>
     </nav>
   </header>
@@ -27,10 +30,10 @@
   <main>
     <section class="hero one-panel flex-center">
       <div class="hero-text">
-        <h1>Shop for your favorite Filipino brands</h1>
-        <h5>Get your favorite Filipino goodies delivered to your doorstep.</h5>
+        <img src="images/sari-sari-logo2.svg" alt="Sari-Sari Logo">
+        <h5>Create your personalized webstore within minutes.</h5>
       </div>
-      <a href="#" class="btn">SHOP NOW</a>
+      <a href="./redirect.html" class="btn">CREATE NOW</a>
       <!-- <div class="hero-image">
         <img src="images/hero-image.png" alt="Filipino snacks and drinks">
       </div> -->
